# broadcast_AI_application

./: .gitignore  README.md  constants.py  pyproject.toml  retriever.py  settings.py
backend/: main.py
backend/app/: __init__.py
backend/app/api/routes/: chat.py  health.py  quote.py
backend/app/config/: constants.py  settings.py
backend/app/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
backend/app/schemas/: chat.py
backend/app/services/: llm.py  pricing_tools.py  quote_generator.py  retriever.py  session.py  tools.py
backend/app/utils/: __init__.py  formatters.py
benchmark/: config.py  dataset.py  retriever_adapter.py  run.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: ChatInput.tsx  Message.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx
frontend/src/types/: index.ts
