[project]
name = "broadcast-ai-application"
version = "0.1.0"
description = "Broadcast AI Application"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-neo4j>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "infinity-emb[torch]==0.0.66",
    "langchain-community>=0.3.21",
    "ragas>=0.4.3",
    "python-docx>=1.2.0",
]
